--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "core-js": "^2.0.0",
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
-    "react-dom": "^15.0.0"
+    "react-dom": "^15.0.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2"
   }
 }
